# test

./: .env  .gitignore  LEARNING.md  README.md  graphql.md  groq_wrapper.py  mycrew.py  requirements.txt  test.py
MM-2025-main/: README.md  package-lock.json  package.json
MM-2025-main/server/routes/: auth.js
p1part1/: L2_research_write_article.ipynb  utils.py
p1part2/: L3_customer_support.ipynb  utils.py
project1/: L6_collaboration_financial_analysis.ipynb
project2/: L_1.ipynb
project3/: L_1.md  L_2.ipynb
project4/: L_2.md  L_3.ipynb
project5/: L_3.md
project6/: L_4.md
project7/: L_5.ipynb  L_5.md
project8/: L_6.md
sample_agentic_system/: README.md  pyproject.toml  report.md
sample_agentic_system/src/sample_agentic_system/: crew.py  main.py
