[project]
name = "sample_agentic_system"
version = "0.1.0"
description = "sample-agentic-system using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.105.0,<1.0.0"
]

[project.scripts]
sample_agentic_system = "sample_agentic_system.main:run"
run_crew = "sample_agentic_system.main:run"
train = "sample_agentic_system.main:train"
replay = "sample_agentic_system.main:replay"
test = "sample_agentic_system.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
